test/classes/initializers/compilerGenerated/parent_inherits_constructor.good
parent_inherits_constructor.chpl:22: In function 'main':
parent_inherits_constructor.chpl:23: error: could not generate default initializer for type 'Child', please define one
